--- a/style.css
+++ b/style.css
@@ -24,23 +24,30 @@ textarea{
   white-space: pre-wrap;
 }
 
-.time-block{/*
+.ampm{
+  font-size: 24px;
+  font-stretch: expanded;
+  color: #000000;
   text-align: center;
-  */
+  padding-top: 15px;
+  font-weight: bold;
+  
+}
+
+.time-block{
   border-radius: 15px;
 }
 
 .row {
   white-space: pre-wrap;
   height: 80px;
-  /*
-  border: 1px solid black;*/
+  border: 1px solid black;
 }
 
 .hour {
   background-color: #ffffff;
   color: #000000;
-  border-top: 1px dashed #000000;
+  border-top: 1px dashed #000000;  
 }
 
 .past {
@@ -64,7 +71,8 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
-}
+  font-weight: bolder;
+  }
 
 .saveBtn i:hover {
   font-size: 20px;
