--- a/style.css
+++ b/style.css
@@ -3,21 +3,20 @@ body {
   font-size: 16px;
   line-height: 1;
 }
-/*
-textarea{
-  background: transparent;
-  border: none;
-  resize: none;
-  color: #000000;
-  padding: 10px;
+
+.lead {
+  font-style: italic;
+  font-size: 24px;
+  color: rgb(51, 48, 54);
+  border-bottom: 5px;
 }
-*/
+
+
 .jumbotron {
   text-align: center;
   background-color: transparent;
   color: black;
-  border-radius: 0;
-  border-bottom: 10px solid black;
+  border-bottom: 7px solid black;
 }
 
 .description{
