--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Open Sans', sans-serif;
-  font-size: 16px;
+  font-size: 20px;
   line-height: 1;
 }
 
@@ -10,22 +10,25 @@ body {
   color: rgb(51, 48, 54);
   border-bottom: 5px;
 }
-/*
+
 textarea{
-  background: transparent;
   border: none;
   resize: none;
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
 }
-*/
+
 
 .jumbotron {
   text-align: center;
-  background-color: rgb(200, 200, 200);
+  background-color:#d3d3d3;
   color: black;
-  border-bottom: 7px solid black;
+  border: 3px solid black;
+  border-radius: 15px;
+  padding: 15px;
+  margin: 7px;
+  
 }
 
 .description{
@@ -38,8 +41,7 @@ textarea{
   color: #000000;
   text-align: center;
   padding-top: 15px;
-  font-weight: bold;
-  
+  font-weight: bold; 
 }
 
 .time-block{
